--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
      <title>App Dowloader</title>
 
      <!-- Fonts -->
-     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Source+Sans+Pro:wght@200;300;400;700&display=swap" rel="stylesheet">
 
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
      <link rel="stylesheet" href="./dist/css/app.css">
 </head>
 
@@ -39,12 +40,13 @@
           <div class="container py-3">
                <div class="row">
                     <div class="col-md-8 offset-md-2 text-center">
-                         <p class="h3 text-info font-weight-light">Point Of App</p>
-                         <p class="lead text-secondary font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta modi enim vitae esse alias facilis obcaecati minima magni
+                         <p class="h3 text-info font-weight-light" data-aos="fade-up">Point Of App</p>
+                         <p class="lead text-secondary font-weight-lighter" data-aos="fade-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta modi enim vitae esse alias facilis
+                              obcaecati minima magni
                               iusto fuga.</p>
                          <div class="row">
                               <div class="col-6 text-right">
-                                   <div class="card border-0">
+                                   <div class="card border-0" data-aos="zoom-in">
                                         <div class="card-body border-right">
                                              <p class="h3 text-danger">1,000</p>
                                              <p class="small m-0">Daily active Users</p>
@@ -52,8 +54,8 @@
                                    </div>
                               </div>
                               <div class="col-6 text-left">
-                                   <div class="card border-0">
-                                        <div class="card-body border-left">
+                                   <div class="card border-0" data-aos="zoom-in">
+                                        <div class=" card-body border-left">
                                              <p class="h3 text-danger">1,000</p>
                                              <p class="small m-0">Daily active Users</p>
                                         </div>
@@ -65,64 +67,128 @@
                          <hr>
                     </div>
                </div>
-
           </div>
 
           <!-- App Section -->
-          <div class="container app-section py-5">
-               <div class="row owl-carousel owl-theme m-0">
-                    <div class="item col-12">
-                         <div class="row">
-                              <!-- about app -->
-                              <div class="col-12 col-md-6 mb-5 mb-md-0">
-                                   <img src="./dist/img/mobile.png" alt="" style="width: 200px;" class="ml-md-auto m-auto">
+          <div class="container app-section">
+               <div class="row d-flex align-items-center justify-content-center">
+                    <div class="col-md-8 col-12">
+                         <ul class="nav nav-pills bg-white py-3 d-flex align-items-center justify-content-center" id="myTab" role="tablist" style="position: sticky; top: 1px; z-index: 5;">
+                              <li class="nav-item" role="presentation">
+                                   <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">First App</a>
+                              </li>
+                              <li class="nav-item" role="presentation">
+                                   <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Second App</a>
+                              </li>
+                         </ul>
+                         <div class="tab-content" id="myTabContent">
+                              <div class="tab-pane fade show active py-4" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                   <div class="col-12">
+                                        <div class="row">
+                                             <!-- about app -->
+                                             <div class="col-12 col-md-6 mb-5 mb-md-0 text-md-right text-center owl-carousel owl-theme">
+                                                  <div class="item m-auto" style="width: 150px;">
+                                                       <img src="./dist/img/mobile.png" alt="" class="w-100 h-100">
+                                                  </div>
+                                                  <div class="item m-auto" style="width: 150px;">
+                                                       <img src="./dist/img/mobile.png" alt="" class="w-100 h-100">
+                                                  </div>
+                                             </div>
+                                             <div class="col-12 col-md-6">
+                                                  <div class="d-flex mb-5" data-aos="fade-up">
+                                                       <div class="steps bg-secondary lead">
+                                                            1
+                                                       </div>
+                                                       <div class="pl-2 text-secondary small">
+                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                                       </div>
+                                                  </div>
+                                                  <div class="d-flex mb-5" data-aos="fade-up">
+                                                       <div class="steps bg-secondary lead">
+                                                            1
+                                                       </div>
+                                                       <div class="pl-2 text-secondary small">
+                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                                       </div>
+                                                  </div>
+                                                  <div class="d-flex mb-5" data-aos="fade-up">
+                                                       <div class="steps bg-secondary lead">
+                                                            1
+                                                       </div>
+                                                       <div class="pl-2 text-secondary small">
+                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                                       </div>
+                                                  </div>
+                                             </div>
+                                        </div>
+                                        <div class="col-12 mt-4">
+                                             <div class="row d-flex justify-content-center">
+                                                  <button class="btn btn-outline-success">
+                                                       <i class="fab fa-google-play pr-2"></i>
+                                                       Download
+                                                  </button>
+                                                  <button class="btn btn-outline-success ml-4">
+                                                       <i class="fab fa-google-play pr-2"></i>
+                                                       Download
+                                                  </button>
+                                             </div>
+                                        </div>
+                                   </div>
                               </div>
-                              <div class="col-12 col-md-6">
-                                   <div class="d-flex mb-5">
-                                        <div class="steps bg-secondary lead">
-                                             1
+                              <div class="tab-pane fade py-4" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                   <div class="col-12">
+                                        <div class="row">
+                                             <!-- about app -->
+                                             <div class="col-12 col-md-6 mb-5 mb-md-0 text-md-right text-center owl-carousel owl-theme">
+                                                  <div class="item m-auto" style="width: 150px;">
+                                                       <img src="./dist/img/mobile.png" alt="" class="w-100 h-100">
+                                                  </div>
+                                                  <div class="item m-auto" style="width: 150px;">
+                                                       <img src="./dist/img/mobile.png" alt="" class="w-100 h-100">
+                                                  </div>
+                                             </div>
+                                             <div class="col-12 col-md-6">
+                                                  <div class="d-flex mb-5" data-aos="fade-up">
+                                                       <div class="steps bg-secondary lead">
+                                                            1
+                                                       </div>
+                                                       <div class="pl-2 text-secondary small">
+                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                                       </div>
+                                                  </div>
+                                                  <div class="d-flex mb-5" data-aos="fade-up">
+                                                       <div class="steps bg-secondary lead">
+                                                            1
+                                                       </div>
+                                                       <div class="pl-2 text-secondary small">
+                                                            <p class="h3 text-info font-weight-lighter">Register</p>
+                                                            <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                                       </div>
+                                                  </div>
+                                             </div>
                                         </div>
-                                        <div class="pl-2 text-secondary small">
-                                             <p class="h3 text-info font-weight-lighter">Register</p>
-                                             <p class="font-weight-lighter">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
+                                        <div class="col-12 mt-4">
+                                             <div class="row d-flex justify-content-center">
+                                                  <button class="btn btn-outline-success">
+                                                       <i class="fab fa-google-play pr-2"></i>
+                                                       Download
+                                                  </button>
+                                                  <button class="btn btn-outline-success ml-4">
+                                                       <i class="fab fa-google-play pr-2"></i>
+                                                       Download
+                                                  </button>
+                                             </div>
                                         </div>
                                    </div>
-                                   <div class="d-flex mb-5">
-                                        <div class="steps bg-secondary lead">
-                                             1
-                                        </div>
-                                        <div class="pl-2 text-secondary small">
-                                             <p class="h3 text-info font-weight-lighter">Register</p>
-                                             <p class="font-weight-lighter">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
-                                        </div>
-                                   </div>
-                                   <div class="d-flex mb-5">
-                                        <div class="steps bg-secondary lead">
-                                             1
-                                        </div>
-                                        <div class="pl-2 text-secondary small">
-                                             <p class="h3 text-info font-weight-lighter">Register</p>
-                                             <p class="font-weight-lighter">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, perferendis?</p>
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-                         <div class="col-12">
-                              <div class="row d-flex justify-content-center">
-                                   <button class="btn btn-outline-success">
-                                        <i class="fab fa-google-play pr-2"></i>
-                                        Download
-                                   </button>
-                                   <button class="btn btn-outline-success ml-4">
-                                        <i class="fab fa-google-play pr-2"></i>
-                                        Download
-                                   </button>
                               </div>
                          </div>
                     </div>
                </div>
           </div>
-
      </section>
 
      <!-- Footer Section -->
@@ -147,7 +213,11 @@
 
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
      <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
      <script src="./dist/js/app.js"></script>
 </body>
 
